<resources>
    <string name="app_name">StoreApp</string>
    <string name="hello">Hello!</string>
    <string name="login">logIn</string>
    <string name="sign">register</string>
    <string name="entar_your_full_name">Enter your Full Name</string>
    <string name="insert_your_passwrod_here">Insert Your Password Here</string>
    <string name="entar_your_email_plase">Enter your Email plase</string>
    <string name="entar_your_phone_number_plase">Enter your phone number plase</string>
    <string name="sign_in">Sign Up</string>
    <string name="insert_your_city">Insert your City</string>
    <string name="register">Register</string>
    <string name="did_you_have_acount">Do you have account ?</string>
    <string name="logine">LogIn</string>
    <string name="waclome_to_delivery_app_n_here_you_can_sell_and_buy">Welcome to Store App \n here you can Sell and buy</string>
    <string name="dosent">that email doesn\'t exist</string>
    <string name="passwordworng">Password is Wrong</string>
    <string name="walcome">Welcome</string>
    <string name="put_here_name_of_producte_plase">Put here Name Of Product Please</string>
    <string name="product_quantity">Put Here Product Quantity</string>
    <string name="put_here_procute_price">Put Here Product Price</string>
    <string name="add_photo_to_producte">Add Photo TO Product</string>
    <string name="products">Products</string>
    <string name="succes">Success Uploaded</string>
    <string name="failed">Failed to Upload</string>
    <string name="path_of_photo">Path of Photo</string>
    <string name="add_the_product">Add The Product</string>
    <string name="up">Uploading</string>
    <string name="errorEmpty">You Can`t late that field Empty</string>
    <string name="errorEmailisExsit">This email already exists</string>
    <string name="RegDone">Register done</string>
    <string name="registering">Registering…</string>
    <string name="Errorgetingdata">Error getting data</string>
    <string name="log">login…</string>
    <string name="entiringimag">Please Enter The Photo Of Product</string>
    <string name="please_insert">Please insert Company Name</string>
    <string name="the_shop">The Shop</string>
    <string name="vistior">sign in</string>
    <string name="edit">log in</string>
    <string name="getp">Getting Products</string>
    <string name="lessthanOne">You Can\'t buy less tha one </string>
    <string name="buymore">You can\'t buy More</string>
    <string name="you_don_t_have_account">You don`t Have Account ? </string>
    <string name="Signin">Sign In</string>
    <string name="less">Or Password Less than 7</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="wait">Wait</string>
    <string name="abdlrhman_mahmoud_elsyed">Abdlrhman Mahmoud Elsyed</string>
    <string name="software_developer">Software Developer</string>
    <string name="about_the_app">About The App</string>
    <string name="it_is_an_application_to_add_products_where_the_application_allows_to_add_details_such_as_price_product_image_and_product_company">It is an application to add products where the application allows to add details such as price, product image and product company</string>
    <string name="the_application_consists_of_6_pages">The application consists of 6 pages</string>
    <string name="the_code_was_written_by_java_programming_language_with_the_use_of_architecture_mvp_mvvm_amp_using_firebase_as_a_database_and_stroeg_for_images"><![CDATA[The code was written by Java programming language With the use of architecture MVP + MVVM & Using Firebase as a database and Storage For Images]]></string>
    <string name="license">License to use the ِApp:</string>
    <string name="uses">you can see the soruce code by clicking github Repositories icon and for the using the app you can use and try it but for actual or commercial use you can\'t do that Due to limited storage, read and write rates for Firebase free membership</string>
    <string name="contact">If you want to use this program commercially or personally \n Whether you have your own database host or not \n If you want to modify or add something else \n or for another purpose \nYou can contact me via Telegram</string>
    <string name="total">total price is </string>
    <string name="add_product">add product</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="visitor">Visitor</string>
    <string name="more">More</string>
    <string name="bill">bill</string>
    <string name="attention">Attention</string>
    <string name="singImp">You must be logged in to add products</string>
    <string name="recmoned">\nLet me recommend you this application\n\n</string>
    <string name="choes">choose one</string>
    <string name="cancel">Cancel</string>
    <string name="num">Number of Items </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="waitMessg">Plase Wait For the Proudcet loading</string>
    <string name="MAPS_API_KEY">AIzaSyAoknlXPvctgcDrCPiiTgX8KHlNJM7cuNc</string>
    <string name="mapbutton">Add Location</string>
    <string name="conferm">Conferm</string>
    <string name="operation_confirmed">Operation confirmed</string>
    <string name="marke">Plase Marke your place by Click on it</string>
    <string name="supported">This OS System is old and Not supported</string>


</resources>