<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Waclome.AboutMe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
  android:layout_gravity="center"
                    android:src="@drawable/abde" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/abdlrhman_mahmoud_elsyed" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/software_developer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_margin="@dimen/_10sdp"


                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/facbook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                           android:src="@drawable/ic_fb"/>

                        <ImageView
                            android:id="@+id/twiiter"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_twitter" />

                        <ImageView
                            android:id="@+id/tallgram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_telegram" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/about_the_app" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/it_is_an_application_to_add_products_where_the_application_allows_to_add_details_such_as_price_product_image_and_product_company" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/the_application_consists_of_6_pages" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/the_code_was_written_by_java_programming_language_with_the_use_of_architecture_mvp_mvvm_amp_using_firebase_as_a_database_and_stroeg_for_images" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="start"
                    android:text="@string/license" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/RedBlood"
                    android:text="@string/uses" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/contact"
                    android:textColor="@color/vividred" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/githubRebo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic__91716_github_logo_social_network_social_icon" />

                <ImageView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_github" />

                <ImageView
                    android:id="@+id/linkedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_limked_in" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>