<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProducteControl.AddPrdocte">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/deliverybox" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/products" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ProdcteName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textbackgroud"
                    android:drawableStart="@drawable/box"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/put_here_name_of_producte_plase"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ProdctePrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textbackgroud"
                    android:drawableStart="@drawable/pricetag"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/put_here_procute_price"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ProdcteCompany"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textbackgroud"
                    android:drawableStart="@drawable/office"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/please_insert"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/PhotoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/path_of_photo" />

            <Button
                android:id="@+id/btnChosePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonsginin"
                android:gravity="center"
                android:text="@string/add_photo_to_producte" />

            <Button
                android:id="@+id/btUpD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/add_the_product" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>