<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Login.LoginPage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
android:layout_gravity="center"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Emailtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:drawableStart="@drawable/ic_emailed"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/entar_your_email_plase"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_5sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:drawableStart="@drawable/ic_locked"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/insert_your_passwrod_here"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_5sdp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/vividred"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/vividred"
            app:cornerRadius="@dimen/_1sdp"

            app:strokeWidth="@dimen/_1sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:textColor="@color/black"
                android:text="@string/you_don_t_have_account" />

            <TextView
                android:id="@+id/textSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textColor="@color/black"
                android:text="@string/Signin" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>