<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin.SignIN">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40sp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/buying" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:drawableStart="@drawable/ic_moudle"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    android:hint="@string/entar_your_full_name"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_emilcom"
                    android:textSize="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/entar_your_email_plase"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/insert_your_passwrod_here"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_5sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textphone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:drawableStart="@drawable/smartphone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/entar_your_phone_number_plase"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:endIconMode="custom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:drawableStart="@drawable/city"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/insert_your_city"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:id="@+id/btn_sing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/vividred"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/vividred"
                app:cornerRadius="@dimen/_1sdp"

                app:strokeWidth="@dimen/_1sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
android:textColor="@color/black"
                    android:text="@string/did_you_have_acount" />

                <TextView
                    android:id="@+id/textLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="@color/black"
                    android:text="@string/logine" />
            </LinearLayout>




        </LinearLayout>
    </ScrollView>

</RelativeLayout>